# pingpong-projetos

./: .gitignore  CMakeLists.txt  Makefile  README.md  contexts.c  datatypes.h  pingpong-dispatcher.c  pingpong-tasks1.c  pingpong-tasks3.c  pingpong.c  pingpong.h  queue.c  signal.c  signal.txt  testafila.c
